# wasm-memory-calculation

./: README.md
memory-estimator/: .gitignore  Cargo.toml  README-RPI5.md  deploy-to-rpi5.sh
memory-estimator/models/model_2/model/test_data_set_0/: input_0.pb  output_0.pb
memory-estimator/src/: lib.rs  main.rs  memory_info_estimator.rs  memory_info_monitor.rs  wasm_loaders.rs
memory-estimator/tests/: matrix_multiplication_tests.rs  memory_analysis_tests.rs
memory-estimator/wasm-modules/: fibonacci.cwasm  fibonacci.wasm  fibonacci.wat  fibonacci_optimized.cwasm  fibonacci_optimized.wasm  fibonacci_optimized.wat  image_classification_resnet_onnx.cwasm  image_classification_resnet_onnx.wasm  image_classification_resnet_onnx_batch.cwasm  image_classification_resnet_onnx_batch.wasm  image_classification_squeezenet_onnx.cwasm  image_classification_squeezenet_onnx.wasm  image_classification_squeezenet_onnx_batch.cwasm  image_classification_squeezenet_onnx_batch.wasm  matrix_multiplication_component.cwasm  matrix_multiplication_component.wasm  matrix_multiplication_component.wat  matrix_transpose.cwasm  matrix_transpose.wasm  matrix_transpose.wat  prime_number_checker.cwasm  prime_number_checker.wasm
memory-estimator/wasm_tasks/: inference_component_onnx copy.cwasm  inference_component_onnx.cwasm  matrix_multiplication_component.cwasm  matrix_multiplication_component.wat
