[package]
name = "memory-estimator"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.3"
wasmprinter = "0.239"
base64 = "0.22"
flate2 = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
wasmtime = { git = "https://github.com/natassaf/wasmtime.git", branch = "release-35-update-ort-version" }
wasmtime-wasi = { git = "https://github.com/natassaf/wasmtime.git", package = "wasmtime-wasi", branch = "release-35-update-ort-version" }
wasmtime-wasi-nn = { git = "https://github.com/natassaf/wasmtime.git", package = "wasmtime-wasi-nn", branch = "release-35-update-ort-version", features = ["onnx"] }
anyhow = "1.0.98"
serde = "1.0.219"